variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: illegal start of simple pattern
var int x=0
         ^RunFour:4: error: '=' expected but '}' found.
	}
        ^